infrastructure/resource-advisor/service-exporter.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.0-standalone-strict/service-v1.json
---
apiVersion: v1
kind: Service
metadata:
  name: resource-advisor-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: resource-advisor-exporter
    app.kubernetes.io/part-of: resource-advisor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: resource-advisor-exporter
  ports:
    - name: http
      port: 8081
      targetPort: http
